# firesport-timestamps-recorder

./: .gitignore  CLAUDE.md  FRAME_NAVIGATION_GUIDE.md  LICENSE  MTStomp4.md  Makefile  README.md  README_GUI.md  activate_env.sh  add-timer.py  firetimer-cutvid.py  firetimer-cutvids.py  firetimer-joinvids.py  firetimer-ytdownload.py  firetimer.py  install.py  pyproject.toml  requirements.txt  requirements_gui.txt  run.bat  setup.bat  setup.sh  timestamps  video_timestamp_recorder.py  ytdownload.py
